# trash-pile

./: README.md  package-lock.json  package.json  tailwind.config.js
.next/cache/: next-server.js.nft.json
.next/server/pages/: deposit_trash.js  deposit_trash_confirmation.js  index.js  viewdump.js
.next/static/chunks/: _error.js  node_modules_toruslabs_solana-embed_dist_solanaEmbed_esm_js.js  webpack.js
.next/static/webpack/: 048374e0dfd87d8e.webpack.hot-update.json  (+731 more)
components/: Button.js  ContentWrapper.js  DepositTrashContainer.js  DepositTrashView.js  Header.js  HomeContainer.js  HomeContentWrapper.js  LogoInHeader.js  MainNavBar.js  MainNavButton.js  NFTCard.js  NFTSelectionCard.js  TopBanner.js  test_nft_data.js
components/header/: MainNavBar.js  MainNavButton.js  TopBanner.js
pages/: _app.js  about.js  deposit_trash.js  index.js  recycle.js  viewdump.js
solana-program/: .gitignore  README.md  package-lock.json  package.json
solana-program/js/test/: main.ts  (+2 more)
solana-program/program/: Cargo.toml
solana-program/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
web-client/: .gitignore  package-lock.json  package.json
web-client/components/: Button.js  ContentWrapper.js  DepositConfirmationView.js  DepositTrashView.js  Footer.js  HomeContentWrapper.js  HomeView.js  NFTReviewScreenCard.js  NFTSelectionCard.js  RecycleView.js  ViewWrapper.js  WalletNotConnectedView.js
web-client/pages/: _app.js  about.js  deposit_trash.js  deposit_trash_confirmation.js  index.js  recycle.js  viewdump.js
web-client/styles/: globals.css
(+775 files in other folders)
