[package]
name = "trashpile-solana"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.10.10"
spl-associated-token-account = { version="1.0.5", features = ["no-entrypoint"] }
spl-token = { version="3.3.0", features = ["no-entrypoint"] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]